submissions/programming-assignment-1-HammArDev/grading_results.txt
Compilation Failed:
In file included from main.cpp:3:
./SpaceRoute.cpp:67:32: error: use of class template 'Node' requires template arguments
   67 |         Node<T>* newNode = new Node(data);
      |                                ^
./SpaceRoute.cpp:6:7: note: template is declared here
    5 | template <typename T>
      | ~~~~~~~~~~~~~~~~~~~~~
    6 | class Node {
      |       ^
./SpaceRoute.cpp:86:32: error: use of class template 'Node' requires template arguments
   86 |         Node<T>* newNode = new Node(data);
      |                                ^
./SpaceRoute.cpp:6:7: note: template is declared here
    5 | template <typename T>
      | ~~~~~~~~~~~~~~~~~~~~~
    6 | class Node {
      |       ^
./SpaceRoute.cpp:116:36: error: use of class template 'Node' requires template arguments
  116 |             Node<T>* newNode = new Node(data);
      |                                    ^
./SpaceRoute.cpp:6:7: note: template is declared here
    5 | template <typename T>
      | ~~~~~~~~~~~~~~~~~~~~~
    6 | class Node {
      |       ^
3 errors generated.
SpaceRoute.cpp:67:32: error: use of class template 'Node' requires template arguments
   67 |         Node<T>* newNode = new Node(data);
      |                                ^
SpaceRoute.cpp:6:7: note: template is declared here
    5 | template <typename T>
      | ~~~~~~~~~~~~~~~~~~~~~
    6 | class Node {
      |       ^
SpaceRoute.cpp:86:32: error: use of class template 'Node' requires template arguments
   86 |         Node<T>* newNode = new Node(data);
      |                                ^
SpaceRoute.cpp:6:7: note: template is declared here
    5 | template <typename T>
      | ~~~~~~~~~~~~~~~~~~~~~
    6 | class Node {
      |       ^
SpaceRoute.cpp:116:36: error: use of class template 'Node' requires template arguments
  116 |             Node<T>* newNode = new Node(data);
      |                                    ^
SpaceRoute.cpp:6:7: note: template is declared here
    5 | template <typename T>
      | ~~~~~~~~~~~~~~~~~~~~~
    6 | class Node {
      |       ^
3 errors generated.

README.md Present
Final Score: 0/100